--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,5 +1,5 @@
 .Hero {
-  height: 270px;
+  /* height: 270px; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,10 +16,15 @@
   margin: 20px;
 }
 .HeroTitle > h1{
-    height: 48px;
+    /* height: 48px; */
     font-size: 32px;
 }
 .HeroImage {
   height: 212px;
   width: 212px;
+}
+@media(max-width:400px){
+  .Hero{
+    flex-direction: column;
+  }
 }
