--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -5,8 +5,15 @@
     align-items: center;
     background-color: var(--color-primary);
     width: 100vw;
-    height: 75px;
+    /* height: 75px; */
     padding: 0px 32px;
     /* border: 3px solid red; */
 }
+@media (
+    max-width: 820px) {
+        .navbar {
+            flex-direction: column;
+        }
+    }
+
 
